--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Install dependencies
+      working-directory: frontend
       run: |
         dart pub get
         dart analyze
