--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,33 +11,21 @@ on:
   
 jobs:
   build:
-    # This job will run on ubuntu virtual machine
     runs-on: ubuntu-latest
     steps:
-    - name: Install dependencies
-      working-directory: frontend
-      run: |
-        flutter pub get
-
-      
-    
-#     # Setup Java environment in order to build the Android app.
-#     - uses: actions/checkout@v1
-      
-#     - uses: actions/setup-java@v1
-#       with:
-#         java-version: '12.x'
-    
-#     # Setup the flutter environment.
-#     - uses: subosito/flutter-action@v1
-#       with:
-#         channel: 'beta' # 'dev', 'alpha', default to: 'stable'
-#         # flutter-version: '1.12.x' # you can also specify exact version of flutter
-        
-#     # Get flutter dependencies.
-#     - name: Set up flutter
-#       working-directory: frontend/adventure_it
-#       run: flutter pub get
+     - name: Install dependencies
+       working-directory: frontend/adventure_it
+       run: flutter pub get
+     - uses: actions/checkout@v1
+     - uses: actions/setup-java@v1
+       with:
+        java-version: '12.x'
+     - uses: subosito/flutter-action@v1
+       with:
+        channel: 'beta' # 'dev', 'alpha', default to: 'stable'
+     - name: Set up flutter
+       working-directory: frontend/adventure_it
+       run: flutter pub get
 
   
 # jobs:
